Change bin name (test -> step1)

--- a/step1/Makefile
+++ b/step1/Makefile
@@ -7,7 +7,7 @@
 #------------------------------------------------------------------------------
 # Program name
 #------------------------------------------------------------------------------
-PROGRAM  := test
+PROGRAM  := step1
 
 #------------------------------------------------------------------------------
 # Compiler name
